--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "firebase": "^11.3.1",
     "next": "15.1.7",
+    "qrcode.react": "^4.2.0",
+    "qrcodejs": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
